2004-10-23  Martin Schaffner  <maschaffner@gmx.ch>

	* main/Makefile.am, main/inferno.c, main/credits.c, main/endlevel.c,
	main/bmread.c, main/titles.c, main/compbit.h, main/text.c,main/text.h,
	VisualC/d2x/d2x.dsp, VisualC/d2xgl/d2xgl.dsp, VisualCE/d2x/d2x.vcp:
	delete file compbit.h, move functionality to text.c, modify all
	previous users of compbit.h to use existing function in text.h
	* main/inferno.c: remove warning created by the fix for the cfgets
	issue of 2004-08-29
	* main/bmread.c: add comment

2004-10-23  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* cfile/cfile.c: declare variable on top of block
	* main/menu.c, main/mission.c, main/mission.h, main/multi.c,
	main/multi.h, main/network.c: move mission list handling functionality
	to mission.c, remove unnecessary load_mission calls in menu.c
	* main/game.c: remove unnecessary build_mission_list call
	* main/mission.c, main/mission.h: correct comments about anarchy-only
	* main/mission.h, main/network.c, main/playsave.c, main/state.c:
	remove explicit uses of mission list

2004-10-21  Martin Schaffner  <maschaffner@gmx.ch>

	* libmve/mveplay.c: make it compile on Cygwin

2004-10-14  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/config.c: fix bug uncovered by having fgets cut off ending \n

	* main/text.c: fix crash on Mac OS X, probably fix bug 738

	* include/mono.h: add mprintf support for carbon (Mac OS 9)

2004-10-09  Martin Schaffner  <maschaffner@gmx.ch>

	* main/automap.c, main/cntrlcen.c, main/collide.c, main/endlevel.c,
	main/gamerend.c, main/gameseq.c, main/mission.h, main/titles.c:
	use new macros PLAYING_BUILTIN_MISSION and EMULATING_D1 for accessing
	information about the current mission, for easier code refactorisation.

	* cfile/cfile.c: correct warnings caused by change of 2004-09-30

	* main/gamemine.c, main/piggy.c: fix bug 1675:
	use better d2 textures if d1 hog is present but not loadable

2004-09-30  Martin Schaffner  <maschaffner@gmx.ch>
