@@ -1,4 +1,4 @@
-/* $Id: mission.h,v 1.21 2004-10-23 19:39:35 schaffner Exp $ */
+/* $Id: mission.h,v 1.22 2004-10-24 12:46:49 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -55,57 +55,68 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #define FULL_10_MISSION_HOGSIZE     7107354 // v1.0
 #define MAC_FULL_MISSION_HOGSIZE    7110007 // v1.1 - 1.2
 
-//mission list entry
-typedef struct mle {
-	char    filename[9];                // path and filename without extension
-	char    mission_name[MISSION_NAME_LEN+1];
-	ubyte   anarchy_only_flag;          // if true, mission is anarchy only
-	ubyte   location;                   // see defines below
-	ubyte   descent_version;            // descent 1 or descent 2?
-} mle;
-
-//values that describe where a mission is located
-#define ML_CURDIR       0
-#define ML_MISSIONDIR   1
-#define ML_CDROM        2
-
 //where the missions go
-#ifndef EDITOR
+#if 1 // ndef EDITOR
 #define MISSION_DIR "missions/"
 #else
 #define MISSION_DIR "./"
 #endif
 
-extern mle Mission_list[MAX_MISSIONS];
+typedef struct {
+	char	mission_name[MISSION_NAME_LEN+1];
+	char	filename[9];	// filename
+	ubyte	descent_version;	// descent 1 or descent 2?
+	bool	anarchy_only_flag;	// if true, mission is only for anarchy
+	int	builtin_hogsize;	// the size of the hogfile for a builtin mission, and 0 for an add-on mission
+	char	briefing_text_filename[FILENAME_LEN]; // name of briefing file
+	char	ending_text_filename[FILENAME_LEN]; // name of ending file
+	ubyte	last_level;
+	sbyte	last_secret_level;
+	ubyte	n_secret_levels;
+	ubyte	secret_level_table[MAX_SECRET_LEVELS_PER_MISSION]; // originating level no for each secret level 
+	// arrays of names of the level files
+	char	level_names[MAX_LEVELS_PER_MISSION][FILENAME_LEN];
+	char	secret_level_names[MAX_SECRET_LEVELS_PER_MISSION][FILENAME_LEN];
+#if 0 //def EDITOR	Support for multiple levels, briefings etc open at once
+	Window	window;
+	Window	attributes;// Window for changing them
+	ubyte	enhanced;
+	void	*briefing;
+	void	*ending;
+	Level	*level[MAX_LEVELS_PER_MISSION];
+	Level	*secLevel[MAX_SECRET_LEVELS_PER_MISSION];
+	void	*others[MAX_HOGFILES];
+	char	Other_file_names[MAX_HOGFILES][FILENAME_LEN];
+#endif
+} Mission;
 
-extern int Current_mission_num, Builtin_mission_num;
-extern char *Current_mission_filename,*Current_mission_longname;
-extern char Builtin_mission_filename[9];
-extern int Builtin_mission_hogsize;
+extern Mission *Current_mission; // current mission
 
-#define is_SHAREWARE (Builtin_mission_hogsize == SHAREWARE_MISSION_HOGSIZE)
-#define is_MAC_SHARE (Builtin_mission_hogsize == MAC_SHARE_MISSION_HOGSIZE)
-#define is_D2_OEM (Builtin_mission_hogsize == OEM_MISSION_HOGSIZE)
+#define Current_mission_longname	Current_mission->mission_name
+#define Current_mission_filename	Current_mission->filename
+#define Briefing_text_filename		Current_mission->briefing_text_filename
+#define Ending_text_filename		Current_mission->ending_text_filename
+#define Last_level			Current_mission->last_level
+#define Last_secret_level		Current_mission->last_secret_level
+#define N_secret_levels			Current_mission->n_secret_levels
+#define Secret_level_table		Current_mission->secret_level_table
+#define Level_names			Current_mission->level_names
+#define Secret_level_names		Current_mission->secret_level_names
 
-#define PLAYING_BUILTIN_MISSION (Current_mission_num == Builtin_mission_num)
-#define EMULATING_D1 (Mission_list[Current_mission_num].descent_version == 1)
-#define ANARCHY_ONLY_MISSION (Mission_list[Current_mission_num].anarchy_only_flag == 1)
+#define is_SHAREWARE (Current_mission->builtin_hogsize == SHAREWARE_MISSION_HOGSIZE)
+#define is_MAC_SHARE (Current_mission->builtin_hogsize == MAC_SHARE_MISSION_HOGSIZE)
+#define is_D2_OEM (Current_mission->builtin_hogsize == OEM_MISSION_HOGSIZE)
 
-//arrays of name of the level files
-extern char Level_names[MAX_LEVELS_PER_MISSION][FILENAME_LEN];
-extern char Secret_level_names[MAX_SECRET_LEVELS_PER_MISSION][FILENAME_LEN];
+#define PLAYING_BUILTIN_MISSION	(Current_mission->builtin_hogsize != 0)
+#define EMULATING_D1		(Current_mission->descent_version == 1)
+#define ANARCHY_ONLY_MISSION	(Current_mission->anarchy_only_flag == 1)
 
-//fills in the global list of missions.  Returns the number of missions
-//in the list.  If anarchy_mode is set, then also add anarchy-only missions.
-//if there is only one mission, this function will call load_mission on it.
-int build_mission_list(int anarchy_mode);
-
-//loads the named mission if exists.
+//loads the named mission if it exists.
 //Returns true if mission loaded ok, else false.
-int load_mission_by_name(char *mission_name);
+int load_mission_by_name (char *mission_name);
 
 //Handles creating and selecting from the mission list.
 //Returns 1 if a mission was loaded.
-int select_mission(int anarchy_mode, char *message);
+int select_mission (int anarchy_mode, char *message);
 
 #endif
